--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "pipeline"
   ],
   "author": "",
-  "license": "LGPL-3.0",
+  "license": "MIT",
   "engines": {
     "node": ">=24.0.0"
   },
